# HMS

./: .env example  .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt  seed_admin.py
app/: config.py
app/api/: auth.py  departments.py  doctor.py  documents.py  employees.py  locations.py  sub_departments.py
app/models/: department.py  employee.py
app/schemas/: employee.py
database/migrations/: 001_add_core_departments.sql
database/schemas/: 00_PRODUCTION_FUNCTIONS_TRIGGERS.sql  ADMISSION_&_BED_MANAGEMENT.sql  AI & CLINICAL DECISION SUPPORT SYSTEM.sql  AMBULANCE & TRANSPORT MANAGEMENT SYSTEM.sql  Analytics & Business Intelligence (BI) Management System.sql  BILLING_&_FINANCIAL_MANAGEMENT.sql  BIOMEDICAL_WASTE_MANAGEMENT.sql  BLOOD_BANK_MANAGEMENT.sql  Category_19_Telemedicine_Virtual_Care.sql  Category_20_CRM_Patient_Engagement.sql  DIETETICS_NUTRITION_MANAGEMENT.sql  EMERGENCY_&_TRAUMA_MANAGEMENT_SYSTEM.sql  Electronic_Medical_Records.sql  HOUSEKEEPING_MANAGEMENT.sql  HR & PAYROLL MANAGEMENT SYSTEM.sql  ICU_&_CRITICAL_CARE_MANAGEMENT_SYSTEM.sql  INSURANCE & CLAIMS MANAGEMENT SYSTEM.sql  INVENTORY & PROCUREMENT MANAGEMENT SYSTEM.sql  Laboratory Information System.sql  MORTUARY_MEDICOLEGAL_MANAGEMENT.sql  Multi-Hospital  Multi-Tenant Management System.sql  NURSING_MANAGEMENT_SYSTEM.sql  PHARMACY_MANAGEMENT_SYSTEM.sql  QUEUE_MANAGEMENT_SYSTEM.sql  RADIOLOGY INFORMATION SYSTEM.sql  REHABILITATION_PHYSIOTHERAPY_MANAGEMENT.sql  SHARED_MASTER_TABLES.sql  SURGERY_&_OT_MANAGEMENT_SYSTEM.sql  Security, IAM (Identity & Access Management) & Compliance Management System.sql  VISITOR_MANAGEMENT.sql  appointment_management.sql  department.sql  doctor.sql  patient.sql
docs/: RESTRUCTURE_PLAN.md
docs/database/: ADMISSION_&_BED_MANAGEMENT.txt  AI & CLINICAL DECISION SUPPORT SYSTEM.txt  AMBULANCE & TRANSPORT MANAGEMENT SYSTEM.txt  Analytics & Business Intelligence (BI) Management System.txt  BIOMEDICAL_WASTE_MANAGEMENT.txt  BLOOD_BANK_MANAGEMENT.txt  Billing & Financial Management.txt  CATEGORY 19 — Telemedicine & Virtual Care Management System.txt  DATABASE_AUDIT_REPORT.txt  DIETETICS_NUTRITION_MANAGEMENT.txt  department.txt  (+24 more)
frontend/: admin.css  admin.html  admin.js  doctor.html  doctor.js  index.html  login.css  login.js
(+2 files in other folders)
