[project]
name = "hospital-management-system"
version = "1.0.0"
description = "AI-Powered Hospital Management System with Agentic RAG"
requires-python = ">=3.11"
authors = [
    {name = "HMS Team"}
]

dependencies = [
    # --- API Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",

    # --- Database ---
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # --- Authentication & Security ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",

    # --- Redis ---
    "redis>=5.1.0",

    # --- AI & RAG ---
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",

    # --- Vector Database ---
    "pinecone-client>=5.0.0",

    # --- Embeddings ---
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.1.0",

    # --- File Storage ---
    "boto3>=1.35.0",

    # --- HTTP Client ---
    "httpx>=0.27.0",

    # --- Utilities ---
    "python-dotenv>=1.0.1",
    "orjson>=3.10.0",
    "uuid6>=2024.7.10",

    # --- Date & Time ---
    "python-dateutil>=2.9.0",

    # --- Logging ---
    "structlog>=24.4.0",

    # --- Email & SMS ---
    "sendgrid>=6.11.0",

    # --- PDF Generation ---
    "reportlab>=4.2.0",
    "weasyprint>=62.0",

    # --- Excel/CSV ---
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",

    # --- CORS ---
    "starlette>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=30.0.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
